syntax = "proto3";

package financeapp;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message SignUpRequest {
    string username = 1;
    string password = 2;
    string name = 3;
    string gender = 4;
}

message SignUpResponse {
    bool success = 1;
    string message = 2;
}

message Transaction {
    string id = 1;
    string description = 2;
    double amount = 3;
    string userId =4;
    string paymentType=5;
    string category=6;
    string location=7;
    string date=8;
}

message TransactionRequest {
    Transaction transaction = 1;
}

message TransactionResponse {
    Transaction transaction = 1;
}
message DeleteTransactionRequest{
    string id=1;
}
message GetOneTransactionRequest{
    string id=1;
}
message TransactionList {
    repeated Transaction transactions = 1;
}

service AuthenticationService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

service TransactionService {
    rpc CreateTransaction(TransactionRequest) returns (TransactionResponse);
    rpc GetTransaction(GetOneTransactionRequest) returns (TransactionResponse);
    rpc UpdateTransaction(TransactionRequest) returns (TransactionResponse);
    rpc DeleteTransaction(DeleteTransactionRequest) returns (TransactionResponse);
    rpc ListTransactions(Empty) returns (TransactionList);
}

message Empty {}

